# IntentRecognitionTool

./: CMakeLists.txt  README.md
gtest/: CMakeLists.txt  UT_Facts.cpp  UT_IntentRecognition.cpp  UT_Weather.cpp
include/: Facts.h  IntentRecognition.h  Weather.h
src/: CMakeLists.txt  Facts.cpp  IntentRecognition.cpp  Main.cpp  Weather.cpp  weather
